@@ -1,6 +1,8 @@
 # Global Discord Configurations
 discord {
   token=<paste bot token here>
+
+  enable_dot_commands=1
 }
 
 # Global WoW Configurations
@@ -50,7 +52,7 @@ wow {
 # character=<in game character>
 }
 
-# guild notifications]
+# guild notifications
 guild {
   online {
     enabled=0
@@ -67,6 +69,10 @@ guild {
   left {
     enabled=1
     format="`[%user] has left the guild.`"
+  }
+  motd {
+    enabled=1
+    format="`Guild Message of the Day: %message`"
   }
 }
 
